<resources>
    <string name="app_name">GasScale</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="config_device_title">Configuración de Balanza</string>
    <string name="text_serial">#Serial - Balanza</string>
    <string name="text_idbal">O monitoree una balanza ya registrada</string>
    <string name="text_id">ID balanza = </string>
    <string name="nombre_red">Nombre de Red WiFi</string>
    <string name="clave">Clave de Red WiFi</string>

    <string name="config_proveedor_title">Configuración del Proveedor</string>
    <string name="nombre_proveedor">Nombre del Proveedor</string>
    <string name="fono_proveedor">Celular del Proveedor</string>

    <string name="config_address_title">Dirección de Entrega de Gas</string>
    <string name="calle1">Calle Principal</string>
    <string name="numero_casa"># de casa</string>
    <string name="calle2">Calle Secundaria</string>
    <string name="sector">Sector</string>
    <string name="referencia">Referencia</string>

    <string name="porc_gas">Nivel de Gas Actual</string>
    <string name="enviar_texto">Solicitar Gas?</string>
    <string name="updategastxt">Actualizar Estado \n del Tanque.</string>
    <string name="bodysms"> favor enviarme un tanque de gas a </string>

    <string name="title_activity_configdevice">GasScale</string>
    <string name="title_activity_configproveedor">GasScale</string>
    <string name="title_activity_estadogas">GasScale</string>
    <string name="title_activity_btdevices">BTdevicesActivity</string>

</resources>
