<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/backgr">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/formproadr"
        android:layout_above="@+id/btnregistrar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/config_proveedor_title"
                android:textStyle="bold"
                android:textColor="#dddddd"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/nombre_proveedor"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETnombrepro"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/fono_proveedor"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETfonopro"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:inputType="phone"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/config_address_title"
                android:textStyle="bold"
                android:textColor="#dddddd"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/calle1"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETcalle1"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/numero_casa"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETnumerocasa"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/calle2"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETcalle2"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/referencia"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETreferencia"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/text_color"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/sector"
                android:textColor="#dddddd"
                android:layout_gravity="left"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="#"
                android:id="@+id/ETsector"
                android:maxLines="1"
                android:focusable="true"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </ScrollView>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="REGISTRAR"
    android:layout_alignParentBottom="true"
    android:id="@+id/btnregistrar"
    android:onClick="registrodatosenvio"
    android:layout_alignParentRight="true"
    android:background="@color/white"
    android:textColor="@color/textgris"
    android:padding="5dp"/>

</RelativeLayout>
